--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <version>1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>fluent-hc</artifactId>
+      <version>4.3.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
